kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
  template:
    metadata:
      labels:
        service: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
      volumes:
        - name: redis-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: default
spec:
  type: NodePort
  selector:
    service: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30008
