kubernetes/url-shortener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      service: url-shortener
  template:
    metadata:
      labels:
        service: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: 3a1b507e1d3f48bd842c59565d22f4/web-service:url-shortener
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: default
spec:
  type: NodePort
  selector:
    service: url-shortener
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
