kubernetes/routes_2.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: routes
spec:
  virtualhost:
    fqdn: 145.100.130.46
  routes:
  - conditions:
    - prefix: /frontend/
    services:
    - name: frontend
      port: 8002
    pathRewritePolicy:
      replacePrefix:
      - prefix: /frontend/
        replacement: /
  - conditions:
    - prefix: /auth/
    services:
    - name: auth
      port: 8001
    pathRewritePolicy:
      replacePrefix:
      - prefix: /auth/
        replacement: /
  - conditions:
    - prefix: /shortener/
    services:
    - name: url-shortener
      port: 8000
    pathRewritePolicy:
      replacePrefix:
      - prefix: /shortener/
        replacement: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - name: frontend
          image: 3a1b507e1d3f48bd842c59565d22f4/web-service:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: auth
  template:
    metadata:
      labels:
        service: auth
    spec:
      containers:
        - name: auth
          image: 3a1b507e1d3f48bd842c59565d22f4/web-service:auth
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      service: url-shortener
  template:
    metadata:
      labels:
        service: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: 3a1b507e1d3f48bd842c59565d22f4/web-service:url-shortener
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
